--- a/index.html
+++ b/index.html
@@ -13,22 +13,22 @@
   </head>
   <body>
     <section class="w-full h-screen my-bg" id="home">
-      <div class="h-20 w-full fixed top-0 z-50" id="navbar">
+      <div class="h-20 w-full fixed top-0 z-50 hidden md:block" id="navbar">
         <div class="my-container">
           <div class="justify-between flex h-20 m-auto py-6">
             <h2 class="ml-8 text-2xl title text-white">TD</h2>
             <ul class="flex justify-around w-2/5">
-              <li key="0"><a class="text-xs text-white hover:text-gray-500 links" href="#home">HOME</a></li>
-              <li key="1"><a class="text-xs text-white hover:text-gray-500 links" href="#about">ABOUT</a></li>
-              <li key="2"><a class="text-xs text-white hover:text-gray-500 links" href="#portfolio">PORTFOLIO</a></li>
-              <li key="3"><a class="text-xs text-white hover:text-gray-500 links" href="#services">SERVICES</a></li>
-              <li key="4"><a class="text-xs text-white hover:text-gray-500 links" href="#contact">CONTACT</a></li>
+              <li key="0"><a class="text-xs text-white sm:mx-2 mx-0 hover:text-gray-500 links" href="#home">HOME</a></li>
+              <li key="1"><a class="text-xs text-white sm:mx-2 mx-0 hover:text-gray-500 links" href="#about">ABOUT</a></li>
+              <li key="2"><a class="text-xs text-white sm:mx-2 mx-0 hover:text-gray-500 links" href="#portfolio">PORTFOLIO</a></li>
+              <li key="3"><a class="text-xs text-white sm:mx-2 mx-0 hover:text-gray-500 links" href="#services">SERVICES</a></li>
+              <li key="4"><a class="text-xs text-white sm:mx-2 mx-0 hover:text-gray-500 links" href="#contact">CONTACT</a></li>
             </ul>
           </div>
         </div>
       </div>
-      <div class="w-full pt-48">
-        <div class="w-48 h-48 m-auto my-bg rounded-full me-img"></div>
+      <div class="w-full md:pt-48 pt-32">
+        <div class="md:w-48 md:h-48 h-32 w-32 m-auto my-bg rounded-full me-img"></div>
       </div>
       <div class="text-center">
         <h1 class="text-4xl tracking-wide text-white mt-6 font-medium animated fadeInUp delay-1s">Thomas Deman</h1>
@@ -40,27 +40,27 @@
             <h2 class="text-3xl mt-20 subtitles relative inline-block">About Me</h2>
           </div>
       <div class="my-container">
-        <div class="flex justify-around mt-32">
-          <div class="w-1/3 px-8">
+        <div class="flex  md:flex-no-wrap flex-wrap md:justify-around mt-32">
+          <div class="md:w-1/3 w-full px-8 md:m-0 mb-16">
             <p class="font-hairline leading-relaxed text-gray-800">Welcome to my Portfolio ! I'm a Junior web developer from Brussels, Belgium. I just finished a 6 months intensive full-stack web development formation. I've learned different languages and frameworks : Html / Css, Javascript / DOM, React, Bash, Php, Wordpress and Laravel.</p>
           </div>
-          <div class="w-1/3 px-8">
+          <div class="md:w-1/3 w-full px-8 md:m-0 mb-16">
             <p class="font-hairline leading-relaxed text-gray-800">I'm interested in the entire front-end spectrum of web development. I'm a well organised person, independant with high attention to detail. I'm naturally curious, and perpetually working on improving my skills.</p>
           </div>
-          <div class="w-1/3 px-5">
-            <div class="shadow w-5/6 bg-gray-200 rounded mb-5" key="0">
+          <div class="md:w-1/3 w-full px-5">
+            <div class="shadow w-5/6 bg-gray-200 rounded m-auto md:mb-5 mb-5" key="0">
               <div class="bg-gray-800 text-xs text-center text-white rounded" style="width: 96%">Html/Css (Sass)</div>
             </div>
-            <div class="shadow w-5/6 bg-gray-200 rounded mb-5" key="1">
+            <div class="shadow w-5/6 bg-gray-200 rounded m-auto md:mb-5 mb-5" key="1">
               <div class="bg-gray-800 text-xs text-center text-white rounded" style="width: 88%">Javascript</div>
             </div>
-            <div class="shadow w-5/6 bg-gray-200 rounded mb-5" key="2">
+            <div class="shadow w-5/6 bg-gray-200 rounded m-auto md:mb-5 mb-5" key="2">
               <div class="bg-gray-800 text-xs text-center text-white rounded" style="width: 85%">React/Vue</div>
             </div>
-            <div class="shadow w-5/6 bg-gray-200 rounded mb-5" key="3">
+            <div class="shadow w-5/6 bg-gray-200 rounded m-auto md:mb-5 mb-5" key="3">
               <div class="bg-gray-800 text-xs text-center text-white rounded" style="width: 80%">Wordpress</div>
             </div>
-            <div class="shadow w-5/6 bg-gray-200 rounded mb-5" key="4">
+            <div class="shadow w-5/6 bg-gray-200 rounded m-auto md:mb-5 mb-5" key="4">
               <div class="bg-gray-800 text-xs text-center text-white rounded" style="width: 75%">PHP</div>
             </div>
           </div>
@@ -69,30 +69,30 @@
       <div class="my-container">
         <div class="flex justify-around mt-24 mb-32">
           <div class="text-center" key="0">
-            <p class="text-3xl font-thin number"></p>
-            <p class="font-hairline">Hours of Code</p>
+            <p class="md:text-3xl text-xl font-thin number"></p>
+            <p class="font-hairline md:text-base text-sm">Hours of Code</p>
           </div>
           <div class="text-center" key="1">
-            <p class="text-3xl font-thin number"></p>
-            <p class="font-hairline">Hours of Meetings</p>
+            <p class="md:text-3xl text-xl font-thin number"></p>
+            <p class="font-hairline md:text-base text-sm">Hours of Meetings</p>
           </div>
           <div class="text-center" key="2">
-            <p class="text-3xl font-thin number"></p>
-            <p class="font-hairline">Projects Done</p>
+            <p class="md:text-3xl text-xl font-thin number"></p>
+            <p class="font-hairline md:text-base text-sm">Projects Done</p>
           </div>
           <div class="text-center" key="3">
-            <p class="text-3xl font-thin number"></p>
-            <p class="font-hairline">Hours of Research</p>
+            <p class="md:text-3xl text-xl font-thin number"></p>
+            <p class="font-hairline md:text-base text-sm">Hours of Research</p>
           </div>
         </div>
       </div>
     </section>
-    <section class="w-full pb-32" id="portfolio">
+    <section class="w-full md:pb-32 pb-24" id="portfolio">
           <div class="w-full text-center">
             <h2 class="text-3xl mt-20 subtitles relative inline-block">Portfolio</h2>
           </div>
       <div class="mt-24" x-data="{ count: 0 }">
-        <ul class="flex w-1/4 m-auto justify-around h-32">
+        <ul class="flex md:w-1/4 w-1/2 m-auto justify-around h-32">
           <li key="0">
             <button class="font-light hover:text-black text-gray-500" :class="{ 'text-gray-900 portfolio-links relative inline-block' : count === 0 }" @click="count = 0">All</button>
           </li>
@@ -103,8 +103,8 @@
             <button class="font-light hover:text-black text-gray-500" :class="{ 'text-gray-900 portfolio-links relative inline-block' : count === 2 }" @click="count = 2">Demos</button>
           </li>
         </ul>
-        <div class="w-full flex flex-wrap">
-          <div class="w-1/3 relative"><a href="https://tom-deman.github.io/musician/" target="_blank"><img class="px-4 mb-8 img-portfolio" src="./assets/img/1.png" :class="{
+        <div class="w-5/6 m-auto flex flex-wrap">
+          <div class="md:w-1/3 w-full relative"><a href="https://tom-deman.github.io/musician/" target="_blank"><img class="px-4 mb-8 img-portfolio" src="./assets/img/1.png" :class="{
         'hidden':
             ( count === 1 ) &amp;&amp; ( 3 === 0 ) ||
             ( count === 1 ) &amp;&amp; ( 4 === 0 ) ||
@@ -112,10 +112,10 @@
             ( count === 2 ) &amp;&amp; ( 0 === 0 ) ||
             ( count === 2 ) &amp;&amp; ( 1 === 0 ) ||
             ( count === 2 ) &amp;&amp; ( 2 === 0 ) ||
-            ( count === 2 ) &amp;&amp; ( 5 === 0 ),
+            ( count === 2 ) &amp;&amp; ( 5 === 0 )
     }"/>
               <p class="absolute text-gray-100 text-lg text-medium opacity-0 pointer-events-none">Musician</p></a></div>
-          <div class="w-1/3 relative"><a href="https://tom-deman.github.io/agency/" target="_blank"><img class="px-4 mb-8 img-portfolio" src="./assets/img/2.png" :class="{
+          <div class="md:w-1/3 w-full relative"><a href="https://tom-deman.github.io/agency/" target="_blank"><img class="px-4 mb-8 img-portfolio" src="./assets/img/2.png" :class="{
         'hidden':
             ( count === 1 ) &amp;&amp; ( 3 === 1 ) ||
             ( count === 1 ) &amp;&amp; ( 4 === 1 ) ||
@@ -123,10 +123,10 @@
             ( count === 2 ) &amp;&amp; ( 0 === 1 ) ||
             ( count === 2 ) &amp;&amp; ( 1 === 1 ) ||
             ( count === 2 ) &amp;&amp; ( 2 === 1 ) ||
-            ( count === 2 ) &amp;&amp; ( 5 === 1 ),
+            ( count === 2 ) &amp;&amp; ( 5 === 1 )
     }"/>
               <p class="absolute text-gray-100 text-lg text-medium opacity-0 pointer-events-none">Agency</p></a></div>
-          <div class="w-1/3 relative"><a href="https://tom-deman.github.io/Thomas_Deman/" target="_blank"><img class="px-4 mb-8 img-portfolio" src="./assets/img/3.png" :class="{
+          <div class="md:w-1/3 w-full relative"><a href="https://tom-deman.github.io/Thomas_Deman/" target="_blank"><img class="px-4 mb-8 img-portfolio" src="./assets/img/3.png" :class="{
         'hidden':
             ( count === 1 ) &amp;&amp; ( 3 === 2 ) ||
             ( count === 1 ) &amp;&amp; ( 4 === 2 ) ||
@@ -134,10 +134,10 @@
             ( count === 2 ) &amp;&amp; ( 0 === 2 ) ||
             ( count === 2 ) &amp;&amp; ( 1 === 2 ) ||
             ( count === 2 ) &amp;&amp; ( 2 === 2 ) ||
-            ( count === 2 ) &amp;&amp; ( 5 === 2 ),
+            ( count === 2 ) &amp;&amp; ( 5 === 2 )
     }"/>
               <p class="absolute text-gray-100 text-lg text-medium opacity-0 pointer-events-none">Photography</p></a></div>
-          <div class="w-1/3 relative"><a href="https://tom-deman.github.io/javascript-pacman/" target="_blank"><img class="px-4 mb-8 img-portfolio" src="./assets/img/4.png" :class="{
+          <div class="md:w-1/3 w-full relative"><a href="https://tom-deman.github.io/javascript-pacman/" target="_blank"><img class="px-4 mb-8 img-portfolio" src="./assets/img/4.png" :class="{
         'hidden':
             ( count === 1 ) &amp;&amp; ( 3 === 3 ) ||
             ( count === 1 ) &amp;&amp; ( 4 === 3 ) ||
@@ -145,10 +145,10 @@
             ( count === 2 ) &amp;&amp; ( 0 === 3 ) ||
             ( count === 2 ) &amp;&amp; ( 1 === 3 ) ||
             ( count === 2 ) &amp;&amp; ( 2 === 3 ) ||
-            ( count === 2 ) &amp;&amp; ( 5 === 3 ),
+            ( count === 2 ) &amp;&amp; ( 5 === 3 )
     }"/>
               <p class="absolute text-gray-100 text-lg text-medium opacity-0 pointer-events-none">Js Pacman</p></a></div>
-          <div class="w-1/3 relative"><a href="https://tom-deman.github.io/music/" target="_blank"><img class="px-4 mb-8 img-portfolio" src="./assets/img/5.png" :class="{
+          <div class="md:w-1/3 w-full relative"><a href="https://tom-deman.github.io/music/" target="_blank"><img class="px-4 mb-8 img-portfolio" src="./assets/img/5.png" :class="{
         'hidden':
             ( count === 1 ) &amp;&amp; ( 3 === 4 ) ||
             ( count === 1 ) &amp;&amp; ( 4 === 4 ) ||
@@ -156,10 +156,10 @@
             ( count === 2 ) &amp;&amp; ( 0 === 4 ) ||
             ( count === 2 ) &amp;&amp; ( 1 === 4 ) ||
             ( count === 2 ) &amp;&amp; ( 2 === 4 ) ||
-            ( count === 2 ) &amp;&amp; ( 5 === 4 ),
+            ( count === 2 ) &amp;&amp; ( 5 === 4 )
     }"/>
               <p class="absolute text-gray-100 text-lg text-medium opacity-0 pointer-events-none">Music</p></a></div>
-          <div class="w-1/3 relative"><a href="https://tom-deman.github.io/portfolio/" target="_blank"><img class="px-4 mb-8 img-portfolio" src="./assets/img/6.png" :class="{
+          <div class="md:w-1/3 w-full relative"><a href="https://tom-deman.github.io/portfolio/" target="_blank"><img class="px-4 mb-8 img-portfolio" src="./assets/img/6.png" :class="{
         'hidden':
             ( count === 1 ) &amp;&amp; ( 3 === 5 ) ||
             ( count === 1 ) &amp;&amp; ( 4 === 5 ) ||
@@ -167,7 +167,7 @@
             ( count === 2 ) &amp;&amp; ( 0 === 5 ) ||
             ( count === 2 ) &amp;&amp; ( 1 === 5 ) ||
             ( count === 2 ) &amp;&amp; ( 2 === 5 ) ||
-            ( count === 2 ) &amp;&amp; ( 5 === 5 ),
+            ( count === 2 ) &amp;&amp; ( 5 === 5 )
     }"/>
               <p class="absolute text-gray-100 text-lg text-medium opacity-0 pointer-events-none">Portfolio</p></a></div>
         </div>
@@ -178,16 +178,16 @@
             <h2 class="text-3xl mt-20 subtitles relative inline-block">What I Do</h2>
           </div>
       <div class="my-container">
-        <div class="flex my-32 w-full justify-between">
-          <div class="w-1/3 border border-gray-300 rounded h-64 mx-6 text-center relative bottom-0 services-animation" key="0"><i class="fas fa-pencil-alt text-3xl mt-10"></i>
+        <div class="flex md:flex-no-wrap flex-wrap md:my-32 my-16 w-full justify-between">
+          <div class="md:w-1/3 w-full border border-gray-300 rounded h-64 md:mx-6 md:mb-0 mb-16 text-center relative bottom-0 services-animation" key="0"><i class="fas fa-pencil-alt text-3xl mt-10"></i>
             <h3 class="text-xl mt-4">Web Design</h3>
             <p class="font-hairline mt-6 px-10">Building modern web design for your site or web Application</p>
           </div>
-          <div class="w-1/3 border border-gray-300 rounded h-64 mx-6 text-center relative bottom-0 services-animation" key="1"><i class="fas fa-globe text-3xl mt-10"></i>
+          <div class="md:w-1/3 w-full border border-gray-300 rounded h-64 md:mx-6 md:mb-0 mb-16 text-center relative bottom-0 services-animation" key="1"><i class="fas fa-globe text-3xl mt-10"></i>
             <h3 class="text-xl mt-4">Web Development</h3>
             <p class="font-hairline mt-6 px-10">Coding your site properly with the right technology.</p>
           </div>
-          <div class="w-1/3 border border-gray-300 rounded h-64 mx-6 text-center relative bottom-0 services-animation" key="2"><i class="fas fa-camera text-3xl mt-10"></i>
+          <div class="md:w-1/3 w-full border border-gray-300 rounded h-64 md:mx-6 md:mb-0 mb-16 text-center relative bottom-0 services-animation" key="2"><i class="fas fa-camera text-3xl mt-10"></i>
             <h3 class="text-xl mt-4">Photoshoot</h3>
             <p class="font-hairline mt-6 px-10">Graduated from High school in Photography, I can take professional pictures for your projects.</p>
           </div>
@@ -199,8 +199,8 @@
             <h2 class="text-3xl mt-20 subtitles relative inline-block">Contact</h2>
           </div>
       <div class="my-container">
-        <div class="flex w-full mt-24">
-          <div class="w-1/3 pt-8 px-10">
+        <div class="md:flex w-full mt-24">
+          <div class="md:w-1/3 w-full md:pt-8 pt-0 px-10">
             <div class="my-8" key="0">
               <p class="text-lg">Phone:</p>
               <p class="text-gray-600 font-light">Ask me by mail</p>
@@ -214,13 +214,13 @@
               <p class="text-gray-600 font-light">Place de la Minoterie 10, 1080 Molenbeek-Saint-Jean (Molengeek)</p>
             </div>
           </div>
-          <div class="w-2/3">
+          <div class="md:w-2/3 w-full">
             <form>
-              <div class="flex m-4">
-                <div class="w-1/2 mr-8">
+              <div class="flex md:flex-no-wrap flex-wrap m-4">
+                <div class="md:w-1/2 w-full md:mr-8 mr-0 md:mb-0 mb-4 mt-8 md:mt-0">
                   <input class="w-full border border-gray-400 p-4 bg-transparent" placeholder="Name" type="text" required="required"/>
                 </div>
-                <div class="w-1/2">
+                <div class="md:w-1/2 w-full">
                   <input class="w-full border border-gray-400 p-4 bg-transparent" placeholder="Email" type="email" required="required"/>
                 </div>
               </div>
@@ -247,15 +247,15 @@
     </section>
     <section class="bg-black relative" id="footer">
       <div class="my-container">
-        <div class="flex w-full justify-between pt-32">
-          <p class="text-gray-400">&copy; 2019, Thomas Deman, All Rights Reserved.</p>
+        <div class="flex w-full md:justify-between justify-around pt-32">
+          <p class="text-gray-400 md:text-base text-xs">&copy; 2019, Thomas Deman, All Rights Reserved.</p>
           <ul class="flex">
             <li key="0"><a href="https://www.linkedin.com/in/thomas-deman-168562193/" target="_blank"><i class="fab fa-linkedin-in text-gray-400 text-lg mx-4 hover:text-white"></i></a></li>
             <li key="1"><a href="mailto:dt.deman.thomas@gmail.com" target="_blank"><i class="fas fa-envelope text-gray-400 text-lg mx-4 hover:text-white"></i></a></li>
             <li key="2"><a href="https://www.instagram.com/molengeek/" target="_blank"><i class="fab fa-instagram text-gray-400 text-lg mx-4 hover:text-white"></i></a></li>
           </ul>
         </div>
-      </div><a class="to-header absolute" href="#home"><i class="fas fa-arrow-up text-gray-400 text-2xl hover:text-white"></i></a>
+      </div><a class="to-header absolute md:block hidden" href="#home"><i class="fas fa-arrow-up text-gray-400 md:text-2xl text-sm hover:text-white"></i></a>
     </section>
     <script src="./assets/js/main.js" type="module"></script>
   </body>
